<resources>
    <string name="arg_res_0x7f130000">EXIT</string>
    <string name="arg_res_0x7f130001">Navigate home</string>
    <string name="arg_res_0x7f130002">Navigate up</string>
    <string name="arg_res_0x7f130003">More options</string>
    <string name="arg_res_0x7f130004">Done</string>
    <string name="arg_res_0x7f130005">See all</string>
    <string name="arg_res_0x7f130006">Choose an app</string>
    <string name="arg_res_0x7f130007">OFF</string>
    <string name="arg_res_0x7f130008">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="arg_res_0x7f130013">Search…</string>
    <string name="arg_res_0x7f130014">Clear query</string>
    <string name="arg_res_0x7f130015">Search query</string>
    <string name="arg_res_0x7f130016">Search</string>
    <string name="arg_res_0x7f130017">Submit query</string>
    <string name="arg_res_0x7f130018">Voice search</string>
    <string name="arg_res_0x7f130019">Share with</string>
    <string name="arg_res_0x7f13001a">Share with %s</string>
    <string name="arg_res_0x7f13001b">Collapse</string>
    <string name="arg_res_0x7f13001c">Extract the core</string>
    <string name="arg_res_0x7f13001d">Abstract</string>
    <string name="arg_res_0x7f13001e">Show me the abstract of the text.</string>
    <string name="arg_res_0x7f13001f">Access all features</string>
    <string name="arg_res_0x7f130020">Camera access is needed to take photos and convert PDFs.</string>
    <string name="arg_res_0x7f130021">Bookmarks</string>
    <string name="arg_res_0x7f130022">Cancel</string>
    <string name="arg_res_0x7f130023">OK</string>
    <string name="arg_res_0x7f130024">Open</string>
    <string name="arg_res_0x7f130025">Reset</string>
    <string name="arg_res_0x7f130026">Later</string>
    <string name="arg_res_0x7f130027">Privacy policy</string>
    <string name="arg_res_0x7f130028">Showing ads</string>
    <string name="arg_res_0x7f130029">Tip</string>
    <string name="arg_res_0x7f13002a">Update</string>
    <string name="arg_res_0x7f13002b">Add pages</string>
    <string name="arg_res_0x7f13002c">Failed to add shortcut</string>
    <string name="arg_res_0x7f13002d">Add signature</string>
    <string name="arg_res_0x7f13002e">Add</string>
    <string name="arg_res_0x7f13002f">Add Text</string>
    <string name="arg_res_0x7f130030">Add Text feature available!</string>
    <string name="arg_res_0x7f130031">Tap to add text</string>
    <string name="arg_res_0x7f130032">Add Widget</string>
    <string name="arg_res_0x7f130033">Failed to add widget</string>
    <string name="arg_res_0x7f130034">Add widget</string>
    <string name="arg_res_0x7f130035">Added to home screen</string>
    <string name="arg_res_0x7f130036">You can adjust it at any time in \"%s\".</string>
    <string name="arg_res_0x7f130037">Adjusting...</string>
    <string name="arg_res_0x7f130038">AI Assistant</string>
    <string name="arg_res_0x7f130039">Your AI Assistant is now online!</string>
    <string name="arg_res_0x7f13003a">AI Assistant is ready for you!</string>
    <string name="arg_res_0x7f13003b">AI Assistant powered by %s</string>
    <string name="arg_res_0x7f13003c">Hi, I\'m using the AI Assistant in %s to analyze documents. It quickly extracts key points and generates summaries. Give it a try!</string>
    <string name="arg_res_0x7f13003d">Thank you for using the AI Assistant. This feature is designed to help you efficiently process documents through summarization, extraction, translation, and more. Please note that all generated results are for reference only and should not be considered professional advice in legal, financial, or medical matters.\n\nFor significant decisions, please consult a qualified professional. We are not liable for any direct or indirect losses, damages, claims or other consequences resulting from the use of this feature. Please use it with caution and make decisions in conjunction with other authoritative sources of information.</string>
    <string name="arg_res_0x7f13003e">AI is generating...</string>
    <string name="arg_res_0x7f13003f">Let\'s work through your documents together!</string>
    <string name="arg_res_0x7f130040">Hi! I\'m your AI Assistant.</string>
    <string name="arg_res_0x7f130041">Hi!\nNice to meet you %s</string>
    <string name="arg_res_0x7f130042">Join VIP to unlock unlimited messages!</string>
    <string name="arg_res_0x7f130043">Free messages used up</string>
    <string name="arg_res_0x7f130044">Enjoy %s-day free trial &amp; unlock unlimited messages!</string>
    <string name="arg_res_0x7f130045">All Files Access</string>
    <string name="arg_res_0x7f130046">To read and edit more files, we need All Files Access permission.</string>
    <string name="arg_res_0x7f130047">All images</string>
    <string name="arg_res_0x7f130048">All pages (%1$s/%2$s)</string>
    <string name="arg_res_0x7f130049">All pages are displayed</string>
    <string name="arg_res_0x7f13004a">Program corrupted, please reinstall the app from Google Play.</string>
    <string name="arg_res_0x7f13004b">Thanks for your support.\nWe will keep working hard!</string>
    <string name="arg_res_0x7f13004c">File type not supported</string>
    <string name="arg_res_0x7f13004d">Sorry, we currently do not support this file type.</string>
    <string name="arg_res_0x7f13004e">But we are constantly working hard to optimize the app and will support more file types later.</string>
    <string name="arg_res_0x7f13004f">Unlock all premium features</string>
    <string name="arg_res_0x7f130050">Allow us to access your camera and gallery, so you can take photos and convert PDFs.</string>
    <string name="arg_res_0x7f130051">Allow access to all files</string>
    <string name="arg_res_0x7f130052">Character limit exceeded</string>
    <string name="arg_res_0x7f130053">File name</string>
    <string name="arg_res_0x7f130054">Server error, please try again</string>
    <string name="arg_res_0x7f130055">Already converted to PDF</string>
    <string name="arg_res_0x7f130056">Copied</string>
    <string name="arg_res_0x7f130057">Already subscribed</string>
    <string name="arg_res_0x7f130058">Always</string>
    <string name="arg_res_0x7f130059">androidx.startup</string>
    <string name="arg_res_0x7f13005a">Annotate</string>
    <string name="arg_res_0x7f13005b">Answer questions</string>
    <string name="app_name">customfont</string>
    <string name="arg_res_0x7f13005d">Find Backward</string>
    <string name="arg_res_0x7f13005e">iOffice Reader cannot find the data you are searching for</string>
    <string name="arg_res_0x7f13005f">Find</string>
    <string name="arg_res_0x7f130060">Find Forward</string>
    <string name="arg_res_0x7f130061">iOffice Reader has reached the beginning of the document</string>
    <string name="arg_res_0x7f130062">iOffice Reader has reached the end of the document</string>
    <string name="arg_res_0x7f130063">Approve</string>
    <string name="arg_res_0x7f130064">Back</string>
    <string name="arg_res_0x7f130065">Pen Settings</string>
    <string name="arg_res_0x7f130066">Draw Mode</string>
    <string name="arg_res_0x7f130067">UnErase</string>
    <string name="arg_res_0x7f130068">Erase</string>
    <string name="arg_res_0x7f130069">Find</string>
    <string name="arg_res_0x7f13006a">Generated Picture</string>
    <string name="arg_res_0x7f13006b">Goto</string>
    <string name="arg_res_0x7f13006c">Internet Search</string>
    <string name="arg_res_0x7f13006d">UnDraw</string>
    <string name="arg_res_0x7f13006e">Draw</string>
    <string name="arg_res_0x7f13006f">Read</string>
    <string name="arg_res_0x7f130070">Share</string>
    <string name="arg_res_0x7f130071">This is an app widget description</string>
    <string name="arg_res_0x7f130072">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arg_res_0x7f130073">Apply to all pages</string>
    <string name="arg_res_0x7f130074">Apply to selected</string>
    <string name="arg_res_0x7f130075">demo...</string>
    <string name="arg_res_0x7f130076">Architect / Product Manager</string>
    <string name="arg_res_0x7f130077">As your AI Assistant,\nI can</string>
    <string name="arg_res_0x7f130078">Ask every time</string>
    <string name="arg_res_0x7f130079">Select the features you value most and get your tasks done more efficiently.</string>
    <string name="arg_res_0x7f13007a">Which features interest you?</string>
    <string name="arg_res_0x7f13007b">We will use this information to personalize your experience.</string>
    <string name="arg_res_0x7f13007c">Which describes your current role?</string>
    <string name="arg_res_0x7f13007d">Ask a question</string>
    <string name="arg_res_0x7f13007e">No commitment, cancel anytime</string>
    <string name="arg_res_0x7f13007f">Auto</string>
    <string name="arg_res_0x7f130080">Auto crop</string>
    <string name="arg_res_0x7f130081">Basic</string>
    <string name="arg_res_0x7f130082">Batch scan</string>
    <string name="arg_res_0x7f130083">Best PDF Reader</string>
    <string name="arg_res_0x7f130084">Best Price</string>
    <string name="arg_res_0x7f130085">Best\nPrice</string>
    <string name="arg_res_0x7f130086">Blank</string>
    <string name="arg_res_0x7f1300cd">Conversion method</string>
    <string name="arg_res_0x7f13010a">Download failed. Please free up space and try again later.</string>
    <string name="arg_res_0x7f13010b">Downloading required resources...</string>
    <string name="arg_res_0x7f13013c">Choose from gallery</string>
    <string name="arg_res_0x7f13013d">Cancel</string>
    <string name="arg_res_0x7f13013f">Take a photo</string>
    <string name="arg_res_0x7f130144">sans-serif-medium</string>
    <string name="arg_res_0x7f130150">File size</string>
    <string name="arg_res_0x7f130172">Open failed, the file is damaged</string>
    <string name="arg_res_0x7f1302eb">Find \"%s\" and set as default</string>
    <string name="arg_res_0x7f13033f">PDF to Image</string>
    <string name="arg_res_0x7f130340">PDF to Long Image</string>
    <string name="arg_res_0x7f13036c">All PDF Reader</string>
    <string name="arg_res_0x7f130374">Cancel</string>
    <string name="arg_res_0x7f130378">Clear history</string>
    <string name="arg_res_0x7f13037d">Delete</string>
    <string name="arg_res_0x7f13037f">Are you sure you want to clear all your search history?</string>
    <string name="arg_res_0x7f130382">Details</string>
    <string name="arg_res_0x7f130392">File Name</string>
    <string name="arg_res_0x7f130397">Last modified</string>
    <string name="arg_res_0x7f1303a1">Last viewed</string>
    <string name="arg_res_0x7f1303ac">Merge</string>
    <string name="arg_res_0x7f1303db">Remove</string>
    <string name="arg_res_0x7f1303eb">Unfavorite</string>
    <string name="arg_res_0x7f1303ef">Share</string>
    <string name="arg_res_0x7f1303fe">Storage path</string>
    <string name="arg_res_0x7f13044c">Save failed</string>
    <string name="arg_res_0x7f13044f">Saving, please wait…</string>
    <string name="arg_res_0x7f1304d6">To save images to the album, we need storage permission.</string>
    <string name="arg_res_0x7f130587">Home screen shortcuts</string>
    <string name="arg_res_0x7f130589">To add widgets, we need the &lt;b&gt;\"Home screen shortcuts\"&lt;/b&gt; permission.</string>
</resources>