<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/ll_mul_select_bottom_wrapper" android:background="@drawable/bg_corner8_white_top" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/dp_58">
    <TextView android:textSize="@dimen/sp_12" android:textColor="@color/selector_tv_bottom" android:ellipsize="end" android:gravity="center" android:layout_gravity="center" android:id="@+id/tv_select_delete" android:paddingTop="@dimen/dp_6" android:paddingBottom="@dimen/dp_6" android:layout_width="0dp" android:layout_height="match_parent" android:foreground="?attr/selectableItemBackgroundBorderless" android:text="@string/arg_res_0x7f13037d" android:maxLines="1" android:layout_weight="1" app:drawableTint="@color/selector_tv_bottom" app:drawableTopCompat="@drawable/ic_more_delete" style="@style/TextViewFont_RobotoMedium"/>
    <TextView android:textSize="@dimen/sp_12" android:textColor="@color/selector_tv_bottom" android:ellipsize="end" android:gravity="center" android:layout_gravity="center" android:id="@+id/tv_select_remove" android:paddingTop="@dimen/dp_6" android:paddingBottom="@dimen/dp_6" android:layout_width="0dp" android:layout_height="match_parent" android:foreground="?attr/selectableItemBackgroundBorderless" android:text="@string/arg_res_0x7f1303db" android:maxLines="1" android:layout_weight="1" app:drawableTint="@color/selector_tv_bottom" app:drawableTopCompat="@drawable/ic_more_remove" style="@style/TextViewFont_RobotoMedium"/>
    <TextView android:textSize="@dimen/sp_12" android:textColor="@color/selector_tv_bottom" android:ellipsize="end" android:gravity="center" android:layout_gravity="center" android:id="@+id/tv_select_unfavorite" android:paddingTop="@dimen/dp_6" android:paddingBottom="@dimen/dp_6" android:visibility="gone" android:layout_width="0dp" android:layout_height="match_parent" android:foreground="?attr/selectableItemBackgroundBorderless" android:text="@string/arg_res_0x7f1303eb" android:maxLines="1" android:layout_weight="1" app:drawableTint="@color/selector_tv_bottom" app:drawableTopCompat="@drawable/ic_home_bookmark" style="@style/TextViewFont_RobotoMedium"/>
    <TextView android:textSize="@dimen/sp_12" android:textColor="@color/selector_tv_bottom" android:ellipsize="end" android:gravity="center" android:layout_gravity="center" android:id="@+id/tv_select_merge" android:paddingTop="@dimen/dp_6" android:paddingBottom="@dimen/dp_6" android:layout_width="0dp" android:layout_height="match_parent" android:foreground="?attr/selectableItemBackgroundBorderless" android:text="@string/arg_res_0x7f1303ac" android:maxLines="1" android:layout_weight="1" app:drawableTint="@color/selector_tv_bottom" app:drawableTopCompat="@drawable/ic_more_merge_pdf" style="@style/TextViewFont_RobotoMedium"/>
    <TextView android:textSize="@dimen/sp_12" android:textColor="@color/selector_tv_bottom" android:ellipsize="end" android:gravity="center" android:layout_gravity="center" android:id="@+id/tv_select_share" android:paddingTop="@dimen/dp_6" android:paddingBottom="@dimen/dp_6" android:layout_width="0dp" android:layout_height="match_parent" android:foreground="?attr/selectableItemBackgroundBorderless" android:text="@string/arg_res_0x7f1303ef" android:maxLines="1" android:layout_weight="1" app:drawableTint="@color/selector_tv_bottom" app:drawableTopCompat="@drawable/ic_more_share" style="@style/TextViewFont_RobotoMedium"/>
</LinearLayout>
