<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@drawable/bg_corner8_white_top" android:paddingTop="@dimen/dp_30" android:paddingBottom="@dimen/dp_24" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="@dimen/sp_20" android:textColor="@color/colorSurface" android:gravity="start" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/arg_res_0x7f130382" android:includeFontPadding="false" android:textAlignment="viewStart" android:layout_marginStart="@dimen/dp_24" android:layout_marginEnd="@dimen/dp_24" style="@style/TextViewFont_RobotoBold"/>
    <androidx.core.widget.NestedScrollView android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:layout_marginStart="@dimen/dp_24" android:layout_marginEnd="@dimen/dp_24">
        <LinearLayout android:orientation="vertical" android:id="@+id/ll_detail" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/sp_16" android:textColor="@color/colorSurface" android:gravity="start" android:id="@+id/tv_file_name_label" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_24" android:text="@string/arg_res_0x7f130392" android:textAlignment="viewStart" style="@style/TextViewFont_RobotoMedium"/>
            <TextView android:textSize="@dimen/sp_14" android:textColor="@color/colorSurfaceFix" android:gravity="start" android:id="@+id/tv_file_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:textAlignment="viewStart" style="@style/TextViewFont_RobotoMedium"/>
            <TextView android:textSize="@dimen/sp_16" android:textColor="@color/colorSurface" android:gravity="start" android:id="@+id/tv_path_label" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_25" android:text="@string/arg_res_0x7f1303fe" android:textAlignment="viewStart" style="@style/TextViewFont_RobotoMedium"/>
            <TextView android:textSize="@dimen/sp_14" android:textColor="@color/colorSurfaceFix" android:gravity="start" android:id="@+id/tv_file_path" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:textAlignment="viewStart" style="@style/TextViewFont_RobotoMedium"/>
            <TextView android:textSize="@dimen/sp_16" android:textColor="@color/colorSurface" android:gravity="start" android:id="@+id/tv_create_time" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_25" android:text="@string/arg_res_0x7f130397" android:textAlignment="viewStart" style="@style/TextViewFont_RobotoMedium"/>
            <TextView android:textSize="@dimen/sp_14" android:textColor="@color/colorSurfaceFix" android:gravity="start" android:id="@+id/file_creation_time" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:textAlignment="viewStart" style="@style/TextViewFont_RobotoMedium"/>
            <TextView android:textSize="@dimen/sp_16" android:textColor="@color/colorSurface" android:gravity="start" android:id="@+id/tv_last_viewed_label" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_25" android:text="@string/arg_res_0x7f1303a1" android:textAlignment="viewStart" style="@style/TextViewFont_RobotoMedium"/>
            <TextView android:textSize="@dimen/sp_14" android:textColor="@color/colorSurfaceFix" android:gravity="start" android:id="@+id/file_last_viewed" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:textAlignment="viewStart" style="@style/TextViewFont_RobotoMedium"/>
            <TextView android:textSize="@dimen/sp_16" android:textColor="@color/colorSurface" android:gravity="start" android:id="@+id/tv_size_label" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_25" android:text="@string/arg_res_0x7f130150" android:textAlignment="viewStart" style="@style/TextViewFont_RobotoMedium"/>
            <TextView android:textSize="@dimen/sp_14" android:textColor="@color/colorSurfaceFix" android:gravity="start" android:id="@+id/tv_file_size" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:textAlignment="viewStart" style="@style/TextViewFont_RobotoMedium"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_18" android:textColor="@color/white" android:gravity="center" android:id="@+id/tv_action_ok" android:background="@drawable/shape_round_23_orange" android:layout_width="match_parent" android:layout_height="@dimen/dp_46" android:layout_marginTop="@dimen/dp_31" android:text="@string/arg_res_0x7f130023" android:includeFontPadding="false" android:textAllCaps="true" android:layout_marginStart="@dimen/dp_24" android:layout_marginEnd="@dimen/dp_24" style="@style/TextViewFont_RobotoBold"/>
</LinearLayout>
