<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@drawable/bg_corner8_white_top" android:paddingBottom="@dimen/dp_24" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="@dimen/sp_20" android:textColor="@color/colorSurface" android:id="@+id/dia_second_tips_title" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_30" android:text="@string/arg_res_0x7f130378" android:includeFontPadding="false" android:layout_marginStart="@dimen/dp_24" android:layout_marginEnd="@dimen/dp_24" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/TextViewFont_RobotoBold"/>
    <TextView android:textSize="@dimen/sp_16" android:textColor="@color/colorSurface" android:gravity="start" android:id="@+id/dia_second_tips_msg" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/arg_res_0x7f13037f" android:textAlignment="viewStart" android:layout_marginStart="@dimen/dp_24" android:layout_marginEnd="@dimen/dp_24" app:layout_constraintTop_toBottomOf="@+id/dia_second_tips_title" style="@style/TextViewFont_RobotoMedium"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/bottom_ll" android:layout_width="match_parent" android:layout_height="@dimen/dp_46" android:layout_marginTop="@dimen/dp_36" android:layout_marginStart="@dimen/dp_20" android:layout_marginEnd="@dimen/dp_20" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/dia_second_tips_msg">
        <TextView android:textSize="@dimen/sp_18" android:textColor="@color/colorSurface" android:gravity="center" android:id="@+id/dia_second_tips_cancle" android:background="@drawable/shape_round_23_line_bg" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/arg_res_0x7f130374" android:includeFontPadding="false" android:layout_weight="1" android:textAllCaps="true" style="@style/TextViewFont_RobotoBold"/>
        <TextView android:textSize="@dimen/sp_18" android:textColor="@color/white" android:gravity="center" android:id="@+id/dia_second_tips_ok" android:background="@drawable/shape_round_23_orange" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/arg_res_0x7f13037d" android:includeFontPadding="false" android:layout_weight="1" android:textAllCaps="true" android:layout_marginStart="@dimen/dp_12" style="@style/TextViewFont_RobotoBold"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
