<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center" android:orientation="vertical" android:background="@color/black_70" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/bg_corner14_white" android:layout_width="wrap_content" android:layout_height="@dimen/dp_158" android:minWidth="@dimen/dp_128">
        <androidx.appcompat.widget.AppCompatImageView android:id="@+id/ic_logo" android:layout_width="@dimen/dp_80" android:layout_height="@dimen/dp_80" app:srcCompat="@drawable/ic_pdf_reader"/>
        <TextView android:textSize="@dimen/sp_18" android:textColor="@color/black" android:paddingLeft="@dimen/dp_8" android:paddingRight="@dimen/dp_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_12" android:text="@string/arg_res_0x7f13036c" style="@style/TextViewFont_RobotoBold"/>
    </LinearLayout>
    <TextView android:textSize="@dimen/sp_18" android:textColor="@color/white" android:gravity="center" android:id="@+id/tvOpenWithGuideDesc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_32" android:text="@string/arg_res_0x7f1302eb" android:lineSpacingMultiplier="1.2" android:layout_marginStart="@dimen/dp_8" android:layout_marginEnd="@dimen/dp_8" style="@style/TextViewFont_RobotoBold"/>
    <Button android:textSize="@dimen/sp_18" android:textColor="@color/white" android:id="@+id/btnOpenWithGuide" android:background="@drawable/bg_shape_open_with_guide_button" android:layout_width="@dimen/dp_160" android:layout_height="@dimen/dp_46" android:layout_marginTop="@dimen/dp_24" android:text="@string/arg_res_0x7f130023" style="@style/TextViewFont_RobotoBold"/>
</LinearLayout>
