<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@drawable/bg_corner8_white_top" android:paddingTop="0dp" android:paddingBottom="@dimen/dp_23" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="@dimen/sp_20" android:textColor="@color/colorSurface" android:id="@+id/title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_38" android:text="@string/arg_res_0x7f1300cd" android:includeFontPadding="false" android:layout_marginStart="@dimen/dp_24" android:layout_marginEnd="@dimen/dp_24" style="@style/TextViewFont_RobotoBold"/>
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_16" android:textColor="@color/colorSurface" android:gravity="center_vertical" android:id="@+id/pdf2ImageTv" android:paddingLeft="@dimen/dp_18" android:paddingTop="@dimen/dp_15" android:paddingRight="@dimen/dp_18" android:paddingBottom="@dimen/dp_15" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_15" android:text="@string/arg_res_0x7f13033f" android:includeFontPadding="false" android:drawablePadding="@dimen/dp_16" android:paddingHorizontal="@dimen/dp_18" app:drawableStartCompat="@drawable/ic_more_pdf_to_image" style="@style/TextViewFont_RobotoMedium"/>
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_16" android:textColor="@color/colorSurface" android:gravity="center_vertical" android:id="@+id/pdf2LongImageTv" android:paddingLeft="@dimen/dp_18" android:paddingTop="@dimen/dp_15" android:paddingRight="@dimen/dp_18" android:paddingBottom="@dimen/dp_15" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/arg_res_0x7f130340" android:includeFontPadding="false" android:drawablePadding="@dimen/dp_16" android:paddingHorizontal="@dimen/dp_18" app:drawableStartCompat="@drawable/ic_pdf_to_long_image" style="@style/TextViewFont_RobotoMedium"/>
</LinearLayout>
